--- a/examples/bootstrap.html
+++ b/examples/bootstrap.html
@@ -35,7 +35,7 @@
         <div class="jumbotron">
             <div class="container">
                 <h1>Zebra Datepicker</h1>
-                <p>a super-lightweight, highly configurable, cross-browser date picker jQuery plugin</p>
+                <p>a super-lightweight, highly configurable, cross-browser date picker jQuery plugin TEST TEST TEST</p>
                 <hr>
                 <p>
                     <a href="https://github.com/stefangabos/Zebra_Datepicker/archive/master.zip" class="btn btn-primary btn-lg" role="button" style="text-decoration: none">Download</a>
