--- a/examples/date-range-picker.html
+++ b/examples/date-range-picker.html
@@ -34,7 +34,7 @@
 
         <div>
             <div class="well">
-                <div class="row">
+                <div class="row" style="margin-top: 45vh;">
                     <div class="col-sm-3">
                         <input id="datepicker-range-start" type="text" class="form-control" data-zdp_readonly_element="false">
                     </div>
