fast nav and add styles to center datepicker

--- a/examples/date-range-picker.html
+++ b/examples/date-range-picker.html
@@ -33,12 +33,12 @@
     <body>
 
         <div>
-            <div class="well">
-                <div class="row" style="margin-top: 45vh;">
-                    <div class="col-sm-3">
+            <div class="well" style="background-color: white; border: none;">
+                <div class="row" style="margin-top: 45vh; display: flex; align-items: center;">
+                    <div style="display: inline-flex; padding-right: 20px;">
                         <input id="datepicker-range-start" type="text" class="form-control" data-zdp_readonly_element="false">
                     </div>
-                    <div class="col-sm-3">
+                    <div style="margin-top: 45vh; display: flex;">
                         <input id="datepicker-range-end" type="text" class="form-control" data-zdp_readonly_element="false">
                     </div>
                 </div>
