--- a/examples/date-range-picker.html
+++ b/examples/date-range-picker.html
@@ -38,7 +38,7 @@
                     <div style="display: inline-flex; padding-right: 20px;">
                         <input id="datepicker-range-start" type="text" class="form-control" data-zdp_readonly_element="false">
                     </div>
-                    <div style="margin-top: 45vh; display: flex;">
+                    <div style="display: inline-flex; padding-right: 20px;">
                         <input id="datepicker-range-end" type="text" class="form-control" data-zdp_readonly_element="false">
                     </div>
                 </div>
