justify content center

--- a/examples/date-range-picker.html
+++ b/examples/date-range-picker.html
@@ -34,7 +34,7 @@
 
         <div>
             <div class="well" style="background-color: white; border: none;">
-                <div class="row" style="margin-top: 45vh; display: flex; align-items: center;">
+                <div class="row" style="margin-top: 45vh; display: flex; align-items: center; justify-content: center;">
                     <div style="display: inline-flex; padding-right: 20px;">
                         <input id="datepicker-range-start" type="text" class="form-control" data-zdp_readonly_element="false">
                     </div>
