--- a/examples/date-range-picker.html
+++ b/examples/date-range-picker.html
@@ -47,7 +47,7 @@
 
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/zebra_pin@2.0.0/dist/zebra_pin.min.js"></script>
-        <script src="../dist/zebra_datepicker.min.js"></script>
+        <script src="../dist/zebra_datepicker.src.js"></script>
         <script src="examples.js"></script>
 
     </body>
