styling for zebra datepicker

--- a/examples/date-range-picker.html
+++ b/examples/date-range-picker.html
@@ -50,6 +50,16 @@
         <script src="../dist/zebra_datepicker.src.js"></script>
         <script src="examples.js"></script>
 
+        <style>
+            .dp_caption {
+                cursor: text;
+            }
+
+            .dp_caption:hover {
+                background-color: white;
+            }
+        </style>
+
     </body>
 
 </html>
