more specificity in styles

--- a/examples/date-range-picker.html
+++ b/examples/date-range-picker.html
@@ -51,11 +51,11 @@
         <script src="examples.js"></script>
 
         <style>
-            .dp_caption {
+            .Zebra_DatePicker .dp_actions .dp_caption {
                 cursor: text;
             }
 
-            .dp_caption:hover {
+            .Zebra_DatePicker .dp_actions .dp_caption:hover {
                 background-color: white;
             }
         </style>
